--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
 	},
 	"dependencies": {
 		"@lucide/svelte": "^0.562.0",
+		"@supabase/ssr": "^0.8.0",
+		"@supabase/supabase-js": "^2.89.0",
 		"lucide-svelte": "^0.562.0"
 	}
 }
